# Repoexplorer.ai

./: README.md
backend/: README.md  err.txt  pyproject.toml  requirements.txt  test.py  test_models.py
backend/app/: main.py
backend/app/agents/: graph.py
backend/app/api/routes/: ai.py
backend/app/core/: config.py
backend/app/rag/: chunking.py  embeddings.py  ingestion.py  vector_store.py
backend/app/services/: github_service.py  google_service.py
frontend/: README.md
frontend/src/: App.tsx
frontend/src/components/: ChatMessage.tsx  RepoUrlInput.tsx
frontend/src/contexts/: RepoContext.tsx
frontend/src/lib/: api.ts  github.ts  insightsGenerator.ts  types.ts
frontend/src/pages/: Index.tsx  InsightsPage.tsx  StructurePage.tsx
