[project]
name = "repoexplorer-backend"
version = "0.1.0"
description = "Agentic RAG-powered GitHub repository explorer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langgraph",
    "chromadb",
    "langchain-groq",
    "langchain-chroma",
    "groq",
    "gitpython",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "numpy<2",
    "langchain-google-genai",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
